CH added some comments to Ch3 of Case study paper

--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -7,7 +7,10 @@ output:
 # CASE STUDY 1: INTERIOR FRASER COHO SALMON{#IFCChapter}
 
 ## CONTEXT
-
+<!--CH comment: I'm getting some formatting errors with cross-references to section headers, appendices and citations, as well as headers without line spaces before them when I knit. We'll have to fix these at some point. I've added more linebreaks in, but might not have caught them all-->
+<!--CH comment: I'm wondering about formatting of labels, i.e., using mathform of S_{gen} vs Sgen as part of Sgen-Ricker (when comparing LBM to Sgen-PriorCap) and Sgen_Ricker vs Sgen_priorCap when used as part of a label in historical plot. Sometimes underscore is used, sometime dash.
+Maybe we should ditch mathematical label for S_{gen} and always use plain text, Sgen so that the differences are not so jarring in the last section of this chapter? And maybe always use dashes instead of underscores in labels? Then should we do the same for SMSY? Or maybe keep as S_{MSY}, as it's not used much and in plain text there is no hint that MSY should be subscript. Or use Smsy to show the subscript in plain text?
+-->
 The Interior Fraser Coho Salmon Stock Management Unit (SMU) includes Coho Salmon that return to the Fraser River and tributaries upstream of Hell’s Gate in the Fraser Canyon. Like most coho salmon, IF Coho spend at least one full year in freshwater as fry before migrating to the ocean as smolts [@arbeiderInteriorFraserCoho2020]. Most (88%) IFC have a 3-year life cycle, in which they leave freshwater in their second year and spend 18 months at sea prior to returning to their natal system to spawn. The remaining 12% have a 4-year life cycle in which they spend an additional year in freshwater before migrating as smolts in their third year. Both 3-year and 4-year life cycles spend 18 months at sea. Less than 1% of IF Coho are believed to return as jacks (precocious mature males that spend only 6 months as sea) or at ages older than 4 years [@arbeiderInteriorFraserCoho2020].
 
 WSP Conservation Units (CUs) have been identified for Interior Fraser Coho based on genetics and geographic separation: Middle Fraser, Fraser Canyon, Lower Thompson, North Thompson, and South Thompson [@dfoWildSalmonPolicy2015; Figure \@ref(fig:coho-map)]. Previous work by the Interior Fraser Coho Recovery Team (IFCRT) identified 11 subpopulations nested within the five CUs, and developed recovery objectives based on maintaining abundance in each of these smaller subpopulation units [@ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006; Table \@ref(tab:cohoCU2SP)]. The delineation of subpopulations was based on several factors, including the presence of natural barriers, the influence of large lakes on downstream discharge and thermal regimes, observations of spawner aggregations under differing discharge conditions, and genetic evidence. The 11 subpopulations are described in detail by the @ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006. 
@@ -319,7 +322,7 @@ Sample sizes were small due to the short time series available for Interior Fras
 
 ***Retrospective Analysis***
 
-2015 was the first year in which the available IFC time series was long enough to estimate logistic regression-based LRPs using the Logistic:Sgen-priorCap and Logistic:IFCRT models. However, the Logistic:Sgen-priorCap model was unable to converge on an LRP estimate in 2018. The Logistic:Sgen-Ricker model required an additional two years of data before LRP estimates were first available in 2017. As a result, only 4-6 years of retrospective analyses were available, depending on the model being considered. All three models showed some fluctuations in LRP estimates over time (Figure \@ref(fig:coho-retroLRPs)). The Logistic:IFCRT model tended to produce the most stable LRPs over time.  
+2015 was the first year in which the available IFC time series was long enough to estimate logistic regression-based LRPs using the Logistic:Sgen-priorCap and Logistic:IFCRT models. However, the Logistic:Sgen-priorCap model was unable to converge on an LRP estimate in 2018. The Logistic:Sgen-Ricker model required an additional two years of data before LRP estimates were first available in 2017. As a result, only 4-6 years of retrospective analyses were available, depending on the model being considered. All three models showed some fluctuations in LRP estimates over time (Figure \@ref(fig:coho-retroLRPs)). The Logistic:IFCRT model tended to produce the most stable LRPs over time.  <!--CH: I think these next 3 plots might be easier to compare if a label for the LBM being used was directly on the figure-->
 
 ```{r coho-retroLRPs, fig.cap="Three-year geometric mean of aggregate spawning abundance for the Interior Fraser Coho SMU (black line) and associated time series of retrospective LRPs from logistic regression-based estimation methods. LRPs are based on a 50\\% probability that all CUs will be above their lower benchmarks. Annual LRP estimates are shown as maximum likelihood values (coloured lines) and associated 95\\% confidence intervals (shaded areas).", warning=FALSE, echo=FALSE, out.width = '50%', fig.align="center"}
 knitr::include_graphics("figure/coho_LRP_compareRetro.png")
@@ -336,7 +339,7 @@ knitr::include_graphics("figure/coho-StatusByNCUs-IndivRickerSurv-50.png")
 
 \linebreak
   
-When the Logistic:Sgen-priorCap model was applied to missing data scenarios in which four out of five CUs had data, LRP estimates were only available for two to three of the five CU combinations, depending on the year (Figure \@ref(fig:coho-IMCap-missingCUs)). For scenarios in which LRP estimates were available, status was poorly estimated with the estimate often falling outside of the 95% confidence interval of the full data estimate. While convergence was more frequent when only three CUs were used, estimates had high uncertainty and were variable among scenarios. Several of the status estimates from three-CU scenarios fell outside of the 95% confidence interval for the full data case. 
+When the Logistic:Sgen-priorCap model was applied to missing data scenarios in which four out of five CUs had data, LRP estimates were only available for two to three of the five CU combinations, depending on the year (Figure \@ref(fig:coho-IMCap-missingCUs)). For scenarios in which LRP estimates were available, status was poorly estimated with the estimate often falling outside of the 95% confidence interval of the full data estimate. While convergence was more frequent when only three CUs were used, estimates had high uncertainty and were variable among scenarios. Several of the status estimates from three-CU scenarios fell outside of the 95% confidence interval for the full data case. <!--CH: Can we add that when LRPs were assessed based on only a subset of CUs, status was also more optimisitc. I think this is a key messsage as to why we should have all CUs included if possible-->
 
 The failure of both the Logistic:Sgen-Ricker and Logistic:Sgen-priorCap models to converge in some years is a function of low sample sizes in the available data set, such that the removal of one or two CUs results in a failure of the logistic regression model to converge on a solution. For example, for the Logistic:Sgen-Ricker model, the South Thompson CU is an influential CU. Removing it from the characterization of 'successful' and 'failure' years, as well as the aggregate abundance used to fit the logistic regression, means that the model cannot converge on a solution because there was no overlap in aggregate abundance levels associated with 'successes' and 'failures', which is a requirement for logistic regression model fits. For the Logistic:Sgen-priorCap model, several CUs are influential due to higher $S_{gen}$ estimates compared to the  Logistic:Sgen-Ricker model. Because several different CUs contribute to 'failure' years, in which CU-level abundances drop below $S_{gen}$, there is higher sensitivity to the removal of any one of these CUs.  
 
@@ -386,7 +389,7 @@ The two stock recruitment models, Ricker and Ricker_priorCap, were treated as tw
 
 We parameterized correlations in recruitment residuals among CUs from MLE predictions of pairwise correlations from spawner recruit model fits. The correlation matrix from the base Ricker model fit is shown in Figure \@ref(fig:coho-recruitResid-Ricker). Correlation values for the Ricker_priorCap model were similar (not shown).    
 
-We initially attempted to reduce covariation in spawner abundances among CUs by scaling correlations in recruitment residuals (i.e., scalar < 1). However, we found that scalars had little effect on projected correlations in spawner abundances among CUs due to the shared marine rate coefficient dominating among-CU variability in recruitment. We therefore used sensitivity analyses of the level of variability in marine survival coefficients among CUs to drive patterns of covariation in spawner abundance, as described below. This approach differs from that taken for WCVI Chinook (Section \@ref(#WCVIchinookChapter).  
+We initially attempted to reduce covariation in spawner abundances among CUs by scaling correlations in recruitment residuals (i.e., scalar < 1). However, we found that scalars had little effect on projected correlations in spawner abundances among CUs due to the shared marine rate coefficient dominating among-CU variability in recruitment. We therefore used sensitivity analyses of the level of variability in marine survival coefficients among CUs to drive patterns of covariation in spawner abundance, as described below. This approach differs from that taken for WCVI Chinook (Section \@ref(WCVIchinookChapter).  
 
 ```{r coho-recruitResid-Ricker, fig.cap="Bubble plot of correlations in recruitment residuals among CUs from base Ricker model fit.", warning=FALSE, echo=FALSE, out.width = '50%',  fig.align="center"}
 knitr::include_graphics("figure/coho-RecuitResidCorrelation-Ricker.png")
@@ -403,7 +406,7 @@ The resulting correlations in spawner abundances from the projections are shown 
 knitr::include_graphics("figure/coho-corrEffect-sigGamma.png")
 ```
 
-
+\linebreak
 ***Variability in age proportions of recruits among CUs***
 
 Annual variability in the age structure of returns was generated from a multivariate logistic distribution parameterized using CU-specific time series of proportions at age. The underlying average age structure for each CU was set at the average from the available time series (brood years 1998 - 2016), while annual deviations from underlying age-specific means were drawn from a multivariate logistic distribution. Annual deviations were held constant among all CUs; however, the scale of annual deviations was controlled by the variability parameter $\tau$, which was estimated individually for each CU. This meant that while all CUs simultaneously experienced increases or decreases in a given year, the magnitude of the increase or decrease was CU-specific. Annual deviations were held constant among CUs to represent the strong co-variation in proportions at age seen in available time series for Interior Fraser Coho, especially since 2010 (Figure \@ref(fig:coho-recruitResid-Ricker)). When the constraint of constant annual deviations was removed, generated proportion at age data was much more variable than observed data, which was considered to be unrealistic. 
@@ -414,7 +417,7 @@ Annual variability in the age structure of recruits has not been included in oth
 knitr::include_graphics("figure/coho-ObsAgeProp-byCU.png")
 ```
 
-
+\linebreak
 ***Covariance in exploitation***
 
 We assumed an average exploitation rate of 12.5% for all CUs in forward projections based on average historical values, with common interannual variability in exploitation rates due to shared fishery impacts among CUs each year. Interannual variability in exploitation rates was assumed to be beta distributed (constrained between 0 and 1), with the standard deviation of the beta distribution parameterized from estimated exploitation rates for 1998 - 2016 brood years. The corresponding coefficient of variation (CV) for interannual variability was 0.44.
@@ -519,15 +522,15 @@ knitr::include_graphics("figure/coho-projLRPCurve-byER.png")
 
 We compared annual estimates of SMU status relative to LRPs for the range of LRP estimation options considered in this case study (Figure \@ref(fig:coho-statusPlot-withBars)). For all aggregate abundance-based LRPs, we used LRPs estimated using a probability threshold of p = 0.5 (i.e., a 50% probability that all CUs would have status above their lower benchmark). We used the following labelling convention when comparing historical status estimates across LRP estimation methods: *"Metric" : "LRP Method" : "CU Status Method"*. 'Metric' refers to the choice of whether to base an LRP on the proportion of CUs above 'poor' CU status (Prop) or on aggregate SMU-level abundance (Abund). The 'LRP' method only applies to aggregate-abundance based LRPs, for which is can be logistic regression (Logistic) or projection-based (Proj). Finally, the 'CU Status Method' can be based on the rapid multidimensional scanning tool in in which CU abundance-based benchmarks are based on one of the two Ricker models (Multidim-Ricker or Multidim-priorCap). Or, when only a single benchmark is used to characterize CU status, it can be based on $S_{gen}$ estimated from one of the two Ricker models (Sgen-Ricker or Sgen-priorCap) or the IFCRT target (IFCRT). For example, when referring to an aggregate abundance-based LRP that is estimated via a logistic regression fit to historical CU status, with CU status estimated relative to $S_{gen}$ from the base Ricker model, we label it as "Abund: Logistic: Sgen_Ricker".  
 
-We show historical results for two types of proportional LRP methods: one that uses the proportion of CUs with rapid multidimensional status > red (e.g., Prop: Multidim-Ricker)  and one that uses the proportion of CUs with abundance > Sgen (e.g., Prop: Sgen-Ricker). Holt et al. (in review) recommend that only the multidimensional approach should be used to assess status; however, we show results for the single metric $S_{gen}$ approach here to demonstrate how the rtwo approaches differ. This comparison is of interest because our aggregate abundance-based LRPs use status estimates based on a single metric rather than the multidimensional status estimates.   
+We show historical results for two types of proportional LRP methods: one that uses the proportion of CUs with rapid multidimensional status > red (e.g., Prop: Multidim-Ricker)  and one that uses the proportion of CUs with abundance > Sgen (e.g., Prop: Sgen-Ricker). Holt et al. (in review) recommend that <!--CH: removed 'only'. I think we get the same message without that inclusion?-->the multidimensional approach should be used to assess status; however, we show results for the single metric $S_{gen}$ approach here to demonstrate how the rtwo approaches differ. This comparison is of interest because our aggregate abundance-based LRPs use status estimates based on a single metric rather than the multidimensional status estimates.   
 
 In addition to the LRP estimation methods presented so far in this case study, we include the full WSP assessment that was conducted in 2014 as an option for estimating CU status for use in a proportion-based LRP. We label this case "Prop : WSP-2014". SMU status would have been assessed as being above the LRP at this time as all CUs were assessed as amber or green.  
 
 In general, estimated LRP breaches coincided with low points in the aggregate abundance time series (2000, 2005 - 2006 and 2015-2017). However, there were differences among methods in the years that SMU status was estimated to be below the LRP, as well as a few methods for which status was never estimated to be below the LRP (Prop: Sgen-Ricker, Abund: Logistic: Sgen-Ricker, Abund: Logistic: IFCRT).  
 
-Comparison of SMU status estimates over time for all LRP estimation methods that used $S_{gen}$ estimates from the base Ricker model (first group of four methods in Figure \@ref(fig:coho-statusPlot-withBars)), showed that the LRP was only breached in years 2015-2017 under the Prop: Multidim-Ricker method. The other three Ricker methods estimated status to remain above the LRP over this period. The latter three methods are similar in that they all assess CU status based on a direct comparison of CU-level abundance to $S_gen$.  In contrast, the decision tree for the rapid multidimensional scanning tool includes a step in which CU status is designated as 'red' anytime the generational mean spawning abundance drops below 1500 spawners (Figure \@ref(fig:decision-tree)).  Because estimated $S_{gen}$ is less than 1500 spawners for the Fraser Canyon CU, it is possible for the criteria of <1500 spawners in a CU to be breached even though abundance remains above $S_{gen}$.  This situation occurs for this CU in 2015-2017. Therefore, LRP methods that use the rapid multi-dimensional scanning tool to characterize CU status can be more precautionary than methods that rely on a single $S_{gen}$ benchmark.  
+Comparison of SMU status estimates over time for all LRP estimation methods that used $S_{gen}$ estimates from the base Ricker model (first group of four methods in Figure \@ref(fig:coho-statusPlot-withBars)), showed that the LRP was only breached in years 2015-2017 under the Prop: Multidim-Ricker method. The other three Ricker methods estimated status to remain above the LRP over this period. The latter three methods are similar in that they all assess CU status based on a direct comparison of CU-level abundance to $S_{gen}$.  In contrast, the decision tree for the rapid multidimensional scanning tool includes a step in which CU status is designated as 'red' anytime the generational mean spawning abundance drops below 1500 spawners (Figure \@ref(fig:decision-tree)).  Because estimated $S_{gen}$ is less than 1500 spawners for the Fraser Canyon CU, it is possible for the criteria of <1500 spawners in a CU to be breached even though abundance remains above $S_{gen}$.  This situation occurs for this CU in 2015-2017. Therefore, LRP methods that use the rapid multi-dimensional scanning tool to characterize CU status can be more precautionary than methods that rely on a single $S_{gen}$ benchmark.  
 
-In the years 2005-2006, SMU status estimates from the 'Abund: Proj: Sgen-Ricker' method fell below the LRP, while the other two Sgen-Ricker methods did not. Declines in aggregate SMU abundance in 2005-2006 were driven by declines in the four larger CUs (which, still remained above their individual $S_{gen}$ estimates). Declines in the lower abundance Fraser Canyon CU were not as drastic. As a result, while SMU-level aggregate abundance dropped below the abundance-based LRP, the Fraser Canyon CU that triggered 'red' status in 2015-2017 remained above 1500 spawners and did not trigger the Prop: Multidim-Ricker method. The aggregate abundance-based LRP from the 'Abund: Proj: Sgen-Ricker' estimation method was higher than that from the 'Abund: Logistic: Sgen-Ricker', so only the former method triggered an LRP breach.  
+In the years 2005-2006, SMU status estimates from the 'Abund: Proj: Sgen-Ricker' method fell below the LRP, while the other two Sgen-Ricker methods did not. Declines in aggregate SMU abundance in 2005-2006 were driven by declines in the four larger CUs (which, still remained above their individual $S_{gen}$ estimates). Declines in the lower abundance Fraser Canyon CU were not as drastic. As a result, while SMU-level aggregate abundance dropped below the abundance-based LRP, the Fraser Canyon CU that triggered 'red' status in 2015-2017 remained above 1500 spawners and did not trigger the Prop: Multidim-Ricker method <!--CH suggested addition: "in 2005-2006". It wasn't immediately clear to me that this sentence still pertains to the 2005-6 era-->. The aggregate abundance-based LRP from the 'Abund: Proj: Sgen-Ricker' estimation method was higher than that from the 'Abund: Logistic: Sgen-Ricker', so only the former method triggered an LRP breach.  
 
 When the Ricker-priorCap model was used to estimate $S_{gen}$ instead of the base Ricker model, both $S_{gen}$ and LRP estimates were higher than under the base Ricker model formulation. This in turn resulted in more frequent LRP breaches when the Ricker-priorCap model was used (see second group of four methods in Figure \@ref(fig:coho-statusPlot-withBars)) compared to when the base Ricker model was used.  Among the 'priorCap' methods, status was most frequently estimated to be below the LRP when the 'Abund: Proj:Sgen-priorCap' method was used; for this method, the LRP was triggered in 13 out of the 21 years between 2000 and 2020. In comparison, the LRP was triggered in 8, 7, and 5 of the 21 years for the 'Abund: Proj:Sgen-Ricker', 'Prop: Multidim-priorCap', and 'Prop: Sgen-priorCap' methods, respectively.  LRP estimates based on the proportional LRPs estimated using the rapid multidimensional scanning tool were therefore the least precautionary of the thee priorCap methods.  
 
@@ -574,7 +577,7 @@ Discussion topic 4: What was learned from retrospective analysis of logistic reg
 
 - Retrospective analyses of logistic regression-based LRP options showed that LRPs were sensitive to data availability. 2015 was the first year that that regression-based LRPs could be estimated, <!--CH remind me why. Is it b/c model didn't converge with shorter time series, or we said that a min # of yrs was required for SR analyses...  And if model model convergence was the problem was this because there were no years of failures, no overlap between successes and failures ,or something else?-->indicating that at least 18 years of data were required. (Although, note that the Logistic regression with the Base Ricker model could not estimate an LRP until 2017, so required 20 years of data).  However, slight shifts in Sgen estimates in some years meant that logistic models were sometimes unable to converge on a solution even with more data. 
 - For years in which LRPs could be estimated, LRP estimates did vary over time; especially when Sgen was estimated each year within an integrated modelling framework.  LRP estimates were more stable when CU status was based on the IFCRT recovery target of at least half of all sub-populations within a CU having more than 1000 fish.  This result is likely because CU-level SR parameters and lower benchmarks in a given historic year were not changing annually in the same way the did in the integrated Sgen-logistic regression model fits.
-- Missing data scenarios, in which 1 or 2 CUs were removed from the data set, highlighted limitations in the ability of the logistic regression models to converge on a solution given small changes in the pattern of 'successes' and 'failures' in the data used as inputs to the logistic regression. Estimates of aggregate SMU status, characterized as generational mean escapement / LRP, were also sensitive to the combination of CUs used. Removal of one or two influencial CUs often resulted in very different characterizations of CU status.<!--CH: see my comments on the Results section for this about possible generalizations--> 
+- Missing data scenarios, in which 1 or 2 CUs were removed from the data set, highlighted limitations in the ability of the logistic regression models to converge on a solution given small changes in the pattern of 'successes' and 'failures' in the data used as inputs to the logistic regression. Estimates of aggregate SMU status, characterized as generational mean escapement / LRP, were also sensitive to the combination of CUs used. Removal of one or two influencial CUs often resulted in very different characterizations of CU status.<!--CH: see my comments on the Results section for this about possible generalizations--> <!--CH comment: Key point: when we remove CUs, status tends to be optimistic compared when all CUs are included-->
 - Taken together, these retrospective results highlight that caution should be used when applying logistic regression-based LRPs. While they did provide similar estimates of SMU status as proportion-based methods using the rapid multidimesional scanning tool for several (but not all) years in the historical comparison, they were sensitive to reductions in data availability. For the specific case of Interior Fraser Coho, retrospective performance may improve in the future as more data becomes available to improve the statistical power of logistic regression fits.
 <!--CH: I suggest adding mention of if these CUs fit the criteria for representativeness from Guildeslines paper-->
 
@@ -583,6 +586,6 @@ Discussion topic 5: What we learned from sensitivity analysis of projection-base
 - Projection-based LRPs were higher, and therefore more precautionary, than logistic regression-based LRPs when forward projections were parameterized using base case parameters.  Given that the estimation of logistic regression-based LRPs were sensitive to data availability, projection-based LRPs may provide more reliable estimates for cases in which population and fishery dynamics can be modelled.
 - Projection-based LRPs also have the advantage of being able to incorporate hypotheses about current population and / or fishery dynamics into forward projections, whereas logistic regression-based LRPs are constrained by conditions that have been previously experienced.
 - The sensitivity of projection-based LRPs to exploitation rate means that these LRPs are specific to the management context.  In our Interior Fraser Coho projections, it made sense to set exploitation rates at the recent average as fishery restrictions since 1998 have maintained relatively stable harvest dynamics. In this case, the LRP represents the level of aggregate abundance that would be required to ensure all CUs were above Sgen given a specified fixed ER policy. If a decision was made to increase the exploitation rate, the LRP would also be increased accordingly to ensure that the underlying objective of all CUs above Sgen could be achieved. This pattern arises due to variability in productivity among CUs; when higher exploitation rates are applied, some low productivity CUs will require higher spawning abundances to ensure that they remain above Sgen. This effect is demonstrated in Appendix \@ref(app:ERsensitivity-appendix). As a result, projection-based LRPs are not static measures of serious harm, as commonly developed for other stocks/species.
-- Projection-based LRPs were also sensitive to the level of co-variation in spawner abundances among CUs over time. Reductions in covariation resulted in increased LRP estimates. This pattern will result in more precautionary LRPs as the relationship between aggregate abundance and CU status weakens. Projected LRPs therefore have a built-in buffer that will help avoid the situation where aggregate abundance remains above the LRP despite several CUs having poor realized status.
+- Projection-based LRPs were also sensitive to the level of co-variation in spawner abundances among CUs over time. Reductions in covariation resulted in increased LRP estimates. This pattern will result in more precautionary LRPs as the relationship between aggregate abundance and CU status weakens. Projected LRPs therefore have a built-in buffer that will help avoid the situation where aggregate abundance remains above the LRP despite several CUs having poor realized status.<!--CH comment: I'm a bit cautious about using the word "buffer" here. If this phenomenon relates to weakening of the actual underlying covariation in abundances then yes, the LRP will increase but there won't be a buffer between it and a 'true' value. It's just that the aggregrate abundances need to be higher to have all CUs > red zone. I suggest changing this sentence to, "Projected LRPs therefore be higher to help avoid the situation where weak CUs drop into red status."  Status from agg-abund LRPs should still be the same as status from the p ppn method under low covariation, i.e., no buffer.-->
 
 <!--CH: I think projection-based LRPs are also sensitivity to differences in size/capacity of component CUs. I guess this is shown somewhat in the Appendix on sens to ER, where I kept SREP constant or varying. If it comes up in the review we can point participants there-->
